Document SAVE menu layout
Add some menus to TODO as well

--- a/misc/index.html
+++ b/misc/index.html
@@ -60,7 +60,7 @@ items:
             name: Recruits{END_LINK} — Darkner profiles
           -
             url: savepoints
-            name: Save points{END_LINK} — Narration accompanying save points
+            name: SAVE points{END_LINK} — SAVE menu and accompanying narration
       -
         url: generic
         name: Generic interactions{END_LINK} shared across chapters
