SAVE points: Separate Ch2 (My) Castle Town points

--- a/misc/savepoints.html
+++ b/misc/savepoints.html
@@ -91,8 +91,11 @@ toc:
     name: Chapter 2
     subheadings:
       -
-        id: ch2castletown
+        id: ch2castletownpre
         name: Castle Town
+      -
+        id: ch2castletown
+        name: My Castle Town
       -
         id: cyberfield
         name: Cyber Field - Entrance
@@ -506,10 +509,8 @@ Room names retrieved from gml_GlobalScript_scr_roomname.gml and mapped from IDs 
 <section class="d-section" id="chapter2">
 	<h2>Chapter 2</h2>
 
-	<h3 id="ch2castletown">Castle Town</h3>
-
-	<h4>Before retrieving the Card Kingdom residents</h4> <!-- 61/room_dw_castle_area_2 -->
-	<!-- The original "power of this place"/"power of fluffy boys" lines from Chapter 1 are left over here, but there's no save point before the Card Kingdom transformation is triggered so it never plays -->
+	<h3 id="ch2castletownpre">Castle Town</h3> <!-- 61/room_dw_castle_area_2 -->
+	<p>Before retrieving the Card Kingdom residents.</p>
 	<d-box theme="dark">
 		<d-text asterisk>You look upon the castle you first saw yesterday...</d-text>
 	</d-box>
@@ -517,7 +518,10 @@ Room names retrieved from gml_GlobalScript_scr_roomname.gml and mapped from IDs 
 		<d-text asterisk>You are filled with the power of immediate nostalgia.</d-text>
 	</d-box>
 
-	<h4>After retrieving the Card Kingdom residents and before visiting the Cyber World</h4> <!-- 62/room_dw_castle_area_2_transformed -->
+	<hr>
+
+	<h3 id="ch2castletown">My Castle Town</h3> <!-- 62/room_dw_castle_area_2_transformed -->
+	<h4>Before visiting the Cyber World</h4>
 	<p>Only plays upon first interaction after entering this room.</p>
 
 	<d-box theme="dark">
