--- a/misc/index.html
+++ b/misc/index.html
@@ -78,6 +78,10 @@ items:
             name: Warp doors
             splitter: "#"
           -
+            url: trashcan
+            name: Trash cans
+            splitter: "#"
+          -
             url: vendingmachine
             name: Vending machines
             splitter: "#"
