Document Cyber City trash zone

--- a/locations/cyberworld/index.html
+++ b/locations/cyberworld/index.html
@@ -19,6 +19,9 @@ items:
         name: Trash Zone
         sublist:
           -
+            url: trashzone
+            name: Main area
+          -
             url: spamtonshop
             name: Spamton's shop
           -
