Generics: Tidy some wording

--- a/misc/generic.html
+++ b/misc/generic.html
@@ -146,7 +146,7 @@ toc:
 	<d-box theme="dark">
 		<d-text asterisk>(<span class="yellow">&lt;Item&gt;</span> was added to your <span class="yellow">STORAGE</span>.)</d-text>
 	</d-box>
-	<p class="note">The item is added to the inventory.</p>
+	<p class="note">The item is added to storage.</p>
 
 	<h4>If both the inventory and storage are full</h4>
 	<d-box theme="dark">
@@ -334,7 +334,7 @@ toc:
 	<d-box theme="dark">
 		<d-text asterisk>(And found $&lt;#&gt;!)</d-text>
 	</d-box>
-	<p class="note">Proceeds to the generic message for obtaining <a href="#moneyget">money</a>.</p>
+	<p class="note">Proceeds to the generic message for obtaining <a href="#moneyget">money</a>. The trash can remains <a href="#trashcan-open">open</a>.</p>
 	<hr class="hr2">
 
 	<hr>
