POWER: Add in Ch3 Egg link text/relative marker

--- a/misc/powermenu.html
+++ b/misc/powermenu.html
@@ -346,7 +346,7 @@ toc:
 		<d-text>Breath quickens<span class="break"></span> around swords.</d-text>
 	</d-box>
 
-	<h5 id="lv3egg">After <a href="{{ '/chapters/chapter3/egg#man' }}"></a></h5>
+	<h5 id="lv3egg">After <a href="{{ '/chapters/chapter3/egg#man' | relative_url }}">obtaining the Egg</a></h5>
 	<d-box theme="powertitle">
 		<d-text>LV3 Enjoying<span class="break"></span> the youthful<span class="break"></span> days.</d-text>
 	</d-box>
