--- a/misc/powermenu.html
+++ b/misc/powermenu.html
@@ -1056,10 +1056,10 @@ toc:
 		<li>Boldness: Equivalent to 3× <code>plot</code> - 222, where <code>plot</code> tracks the progression of the plot. The calculated Boldness values are as follows:
 			<ul>
 				<li>-12 initially</li>
-				<li>-6 after the <a href="{{ '/chapters/chapter2/mouseroom1' | relative_url }}">first mouse puzzle</a></li>
-				<li>3 after the <a href="{{ '/chapters/chapter2/evilvillains' | relative_url }}">gold Berdly statue</a> appears</li>
-				<li>9 after the <a href="{{ '/chapters/chapter2/mouseroom2' | relative_url }}">second mouse puzzle</a></li>
-				<li>12 after the <a href="{{ '/chapters/chapter2/mouseroom3' | relative_url }}">third mouse puzzle</a></li>
+				<li>-6 after the <a href="{{ '/chapters/chapter2/city1#annoyingmouseroom' | relative_url }}">first mouse puzzle</a></li>
+				<li>3 after the <a href="{{ '/chapters/chapter2/evilvillain' | relative_url }}">gold Berdly statue</a> appears</li>
+				<li>9 after the <a href="{{ '/chapters/chapter2/city3#annoyingmouseroom2' | relative_url }}">second mouse puzzle</a></li>
+				<li>12 after the <a href="{{ '/chapters/chapter2/city4#annoyingmouseroom3' | relative_url }}">third mouse puzzle</a></li>
 				<li>15 after the <a href="{{ '/chapters/chapter2/secondalleyway' | relative_url }}">second Berdly fight</a></li>
 				<li>18 after the <a href="{{ '/chapters/chapter2/drive1' | relative_url }}">first half of the car ride with Queen</a></li>
 				<li>33 after the <a href="{{ '/chapters/chapter2/spamton' | relative_url }}">Spamton fight</a></li>
