Virovirokun/Berdly 2/DW items: Small wording tweaks

--- a/encounters/virovirokun.html
+++ b/encounters/virovirokun.html
@@ -316,7 +316,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<h3 id="takecarex-noelle-ft">Flavor text</h3>
 	<h4 id="takecarex-noelle-ft-standard">Standard</h4>
 	<p class="note">Kris and Noelle don nurse/doctor and nurse costumes respectively.</p>
-	<p class="note">Noelle trips and falls on her face with a splat noise. (Does not play after completing the first forcefield puzzle on the Weird Route.)</p>
+	<p class="note">Noelle trips and falls on her face with a splat noise. (Does not occur after completing the first forcefield puzzle on the Weird Route.)</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>You and Noelle showed the enemy tender loving care!</d-text>
 	</d-box>
