--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -289,7 +289,7 @@ toc:
         subheadings:
           -
             id: fallbacks
-            name: Fallbacks
+            name: Overworld description fallbacks
             subheadings:
               -
                 id: iteminvalid
@@ -3358,15 +3358,15 @@ toc:
 	<h3 id="betaitem">Beta item menu</h3>
 	<p>Eloquently named "itemdesc_oldtype", the below text is from what appears to be a beta version of the item menu.</p>
 
-	<h4 id="fallbacks">Fallbacks</h4>
+	<h4 id="fallbacks">Overworld description fallbacks</h4>
 	<h5 id="iteminvalid">Invalid item ID</h5>
-	<p>Plays when an item's ID isn't accounted for in the code.</p>
+	<p>Used when an item's ID isn't accounted for in the code.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>It could not be.</d-text>
 	</d-box>
 
 	<h5 id="itemdefault">Default (null) item</h5>
-	<p>Plays when the unused item ID 0 is provided, probably for testing purposes.</p>
+	<p>Used when the unused item ID 0 is provided, probably for testing purposes.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>An emptiness filled your hands.</d-text>
 	</d-box>
