UNUSED - edit caps, add to TODO, clean description

--- a/misc/index.html
+++ b/misc/index.html
@@ -97,6 +97,6 @@ items:
         url: quiz
         name: TV Time quizzes{END_LINK} — Tenna's questions from Chapter 3
       -
-        url: unused
+        url: UNUSED
         name: UNUSED{END_LINK} — Text found in the game files
 ---
