--- a/misc/unused.html
+++ b/misc/unused.html
@@ -2,7 +2,7 @@
 title: UNUSED
 
 description: >
-  <p>Strings of text that appear in the game but are deliberately unused, as the file in question is never referenced elsewhere.</p>
+  <p>Deliberately unused strings found within the game code. The file this text was found in is never referenced elsewhere.</p>
 
 credits: >
   <p>Compiled by wovenstarlight.</p>
@@ -92,5 +92,5 @@ toc:
 </section>
 
 <section class="d-section">
-	<p class="note">More to come…!</p>
+	<p class="note">More to come…?</p>
 </section>
