Ch3 Quizzes: Add missing line break

--- a/misc/quiz.html
+++ b/misc/quiz.html
@@ -285,7 +285,7 @@ sources:
 	<h4>If the player selects an option before the others do</h4>
 	<d-box theme="battletalkround">
 		<d-speaker>Susie</d-speaker>
-		<d-text>Uhh, well,#you'd know.</d-text>
+		<d-text>Uhh, well,<span class="break"></span> you'd know.</d-text>
 	</d-box>
 	<p class="note">Susie and Ralsei choose the same option as the player.</p>
 
